vault/istio-config/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vault
  namespace: vault
spec:
  gateways:
  - istio-system/main
  hosts:
  - vault.bb.dev
  http:
  - match:
    - uri:
        prefix: "/v1/sys/storage"  #totes not cool
    route:
    - destination:
        host: vault-active.vault.svc.cluster.local
        port:
          number: 8200
  - route:
    - destination:
        host: vault.vault.svc.cluster.local
        port:
          number: 8200
